Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30673

Manual code completion doesn't work

XMLWordPrintable

    • Linux/X11, macOS, Windows
    • 41e581d0e (master)

      Preconditions:
      Code completion set to manual in 'Preferences -> Text Editor -> Completion -> Active completion -> Manually'

      Test steps:
      1. Create a new project(e.g. Non-Qt Project -> Plain C++ Application)
      2. Remove some characters from return statement
      3. Activate code completion with <Ctrl+Space>

      Result:
      Proposal widget is missing.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            jukkanokso Jukka Nokso
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes