Editor: fix assist actions

Amends 411100b0378202dc617acaa236f4730eb4cc43b2

Fixes: QTCREATORBUG-30673
Change-Id: Icc82b6f5526d229a13a7061cbc44904837c25f06
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>